--- a/temp-joey/Base.lproj/Main.storyboard
+++ b/temp-joey/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,15 +21,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AEZ-3m-HTN">
-                                <rect key="frame" x="67" y="169" width="240" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AEZ-3m-HTN">
+                                <rect key="frame" x="0.0" y="91" width="375" height="556"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="AEZ-3m-HTN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="149" id="SL4-mg-AXD"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="AEZ-3m-HTN" secondAttribute="trailing" constant="52" id="SrG-Wz-j8B"/>
-                            <constraint firstItem="AEZ-3m-HTN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="51" id="WTG-iX-xTA"/>
+                            <constraint firstItem="AEZ-3m-HTN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="71" id="ZYQ-bw-Fqt"/>
+                            <constraint firstItem="AEZ-3m-HTN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="kZ8-yd-wvC"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="AEZ-3m-HTN" secondAttribute="bottom" constant="20" id="ppb-rA-vxF"/>
+                            <constraint firstAttribute="trailing" secondItem="AEZ-3m-HTN" secondAttribute="trailing" id="tEO-Eg-gex"/>
                         </constraints>
                     </view>
                     <connections>
@@ -39,6 +39,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="106.59670164917542"/>
         </scene>
     </scenes>
 </document>
